deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-flask

spec:
  replicas: 1
  selector:
    matchLabels:
      component: app 
      version: v1

  template:
    metadata:
      labels:
        component: app
        version: v1
    spec:
      containers:
        - name: app
          image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
          ports:
            - containerPort: 8080
