destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: hello-app-service
  subsets:
  - name: v1
    labels:
      component: app
      version: v1
  - name: v2
    labels:
      component: app
      version: v2
