virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
    - hello-app-service
  http:
  - route:
    - destination:
        host: hello-app-service
        subset: v1
      weight: 100
    - destination:
        host: hello-app-service
        subset: v2
      weight: 0
